--- a/analysis/figures/table1.tex
+++ b/analysis/figures/table1.tex
@@ -20,16 +20,17 @@ Lin et al., (2023) &  &  &  &  &  &  &  & osf.io/3eztd \\
  & Sample 8a & Chinese & 1166 & Collapsed "Itch" and "Tickling" & 32.5 ± 8.4 & 16-60 & 57.0\% &  \\ 
  & Sample 8b & Chinese & 500 & Collapsed "Itch" and "Tickling" & 37.4 ± 7.4 & 20-60 & 56.2\% &  \\ 
 VonMohr et al., (2023) & Sample 9 & English & 21843 &  & 56.5 ± 14.4 & 18-93 & 73.2\% & osf.io/7p9u5 \\ 
-Makowski et al., (2023a) & Sample 10 & English & 485 & Analog scales & 30.1 ± 10.1 & 18-73 & 50.3\% & github.com/RealityBending/IllusionGameReliability \\ 
+Makowski et al., (2023a) & Sample 10 & English & 485 & Analog scales. Does not include temperature, blood sugar and cough items. & 30.1 ± 10.1 & 18-73 & 50.3\% & github.com/RealityBending/IllusionGameReliability \\ 
 Makowski et al., (2023b) & Sample 11 & English & 836 & Analog scales & 25.1 ± 11.3 & 17-76 & 53.0\% & github.com/DominiqueMakowski/PHQ4R \\ 
 Makowski et al., (2023c) & Sample 12 & English & 146 & Analog scales & 21.1 ± 4.3 & 18-50 & 76\% & github.com/RealityBending/InteroceptionPrimals \\ 
-Poerio et al., (2024) & Sample 13 & English & 107 &  & 26.8 ± 9.2 & 18-57 & 74.8\% & osf.io/49wbv \\ 
-Poerio et al., unpublished & Sample 14 & English & 131 &  & 30.9 ± 12.0 & 18-60 & 75.9\% &  \\ 
-Total & Sample 15 &  & 32214 &  & 48.6 ± 13.1 & 17-93 & 71.6\% &  \\ 
+Makowski et al., (2024) & Sample 13 & English & 737 &  & 36.8 ± 14.9 & 17, 87 & 57.3\% & github.com/RealityBending/InteroceptionScale \\ 
+Poerio et al., (2024) & Sample 14 & English & 107 &  & 26.8 ± 9.2 & 18-57 & 74.8\% & osf.io/49wbv \\ 
+Poerio et al., unpublished & Sample 15 & English & 131 &  & 30.9 ± 12.0 & 18-60 & 75.9\% &  \\ 
+Total & Sample 16 &  & 32993 &  & 48.6 ± 13.1 & 17-93 & 71.6\% &  \\ 
 \bottomrule
 \end{tabular*}
 \begin{minipage}{\linewidth}
-Note.*Information taken from the sample description of relevant paper rather than recomputed. Sample 10 does not include IAS items about temperature, blood sugar and cough.\\
+Note.*Information taken from the sample description of relevant paper rather than recomputed.\\
 \end{minipage}
 \end{table}
 
